--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -16,7 +16,7 @@
 
 
 <h1>   Booking page </h1>
-<form action="https://httpbin.org/get" method="get">
+<form id="searchForm">
   
     <p> 
        <label for="location"> Location :</label> 
@@ -80,6 +80,12 @@
     </form>
     <button onclick="fetchGreeting()">Get Greeting</button>
     <p id="response"></p>
+
+    <div id="room-results">
+        <h2>Available Rooms</h2>
+        <ul id="room-list"></ul>
+    </div>
+      
     
 </body>
 
