--- a/frontend/E-hotel.html
+++ b/frontend/E-hotel.html
@@ -16,6 +16,7 @@
 
 <h1>   Welcome to the e-Hotel</h1>
 <ul> 
+<li>   <a href="Dashboard.html">Dashboard</a></li>
 <li>   <a href="SearchHotels.html"> Search for hotels</a></li>
 <li>   <a href="Login.html"> Login page</a></li>
 </ul>
