--- a/frontend/SearchHotels.html
+++ b/frontend/SearchHotels.html
@@ -16,6 +16,9 @@
 
 
 <h1>   Book a hotel</h1>
+<p>
+    Ready to find your perfect stay? Click below to search and book available rooms:
+</p>
 <p>  <a href="booking.html"> booking</a> </p> 
 <p>  <a href="E-hotel.html"> Home</a> </p> 
 <button onclick="fetchGreeting()">Get Greeting</button>
